--- a/style.css
+++ b/style.css
@@ -76,29 +76,38 @@ text-align: center;
 
 }
 input{
-    width: 300px;
+    width: 40%;
     height: 30px;
     border:1px solid #dadce0;
 }
 #search-text{
-    height: 38px;
-    width: 387px;
+    height: 3rem;
+    width: 40rem;
     border: 1px solid rgba(184, 178, 178, 0.527);
     border-radius: 50px;
-    padding-left: 20px;      
+    padding-left: 48px; 
+    font-size: 1.2em;     
 }
-#search-wrapper{
+.search-wrapper{
     
     position: relative;
+    padding-bottom: 3vh;
 }
 #mic-icon{
     position: absolute;
+    top: 10px;
+    right: 15px;
     width: 22px;
     height: auto;
+ 
+    
 }
 #mag-icon{
     position: absolute;
-    
+    top: 15px;
+    left: 20px;
     width: 15px;
     height: auto;
+    opacity: 0.5;
 }
+  
