--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
     font-size: 0.9rem;
     }
 html {
-    height: 100vh;
+    position: relative;
 }
    
 .icon {
@@ -41,11 +41,20 @@ html {
 }
 .navbar-right ul li a {
     text-decoration: none;
-    color: black;
+    color: black ;
 }
+.navbar-right ul li a:hover {
+    text-decoration: underline;
+    
+}
+
 .navbar-left ul li a {
     text-decoration: none;
-    color: black;
+    color: black ;
+}
+    .navbar-left ul li a:hover {
+        text-decoration: underline;
+        
 }
 .login-button {
 	background-color:#1d8ccc;
@@ -68,7 +77,7 @@ main {
     flex-direction: column;
     align-items: center;
     width:100vw;
-    height: 84vh;
+    height: 87vh;
     
 }
 
@@ -137,11 +146,24 @@ input{
         padding:7px 22px;
     }
     
-   footer{
-        bottom:0;
-        height:6vh;
-        background-color: thistle;
-        width: 100vw;
+   footer {
+position:fixed;
+    display:flex;
+    align-items: center;
+    width: 100%;
+    height: 6vh;
+    border: 1px solid #e7e7e7;
+    background-color: #f3f3f3;
+    font-family:Arial;
+    font-weight: 600;
     
-    }
-   
+    padding-bottom: 8px;
+
+   }
+#footer-nav ul>li>a {
+    color: rgb(126, 123, 123);  
+}
+
+#footer-nav  ul>li>a {
+    color: rgb(126, 123, 123);  
+}
